--- a/app/src/main/res/layout/applicant_email_layout.xml
+++ b/app/src/main/res/layout/applicant_email_layout.xml
@@ -8,6 +8,26 @@
     <!--    applicant name-->
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:textColor="#2196F3"
+            android:textStyle="bold"
+            android:text="Encrypted Email: "/>
+        <TextView
+            android:id="@+id/encryptedEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="encryptedEmailID"/>
+    </LinearLayout>
+
+    <!--    applicant name-->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
@@ -83,6 +103,26 @@
             android:text="+123456789"/>
     </LinearLayout>
 
+    <!--    Educational qualification-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:textColor="#2196F3"
+            android:textStyle="bold"
+            android:text="Educational qualification: "/>
+        <TextView
+            android:id="@+id/educationalQualification"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="Educational qualification"/>
+    </LinearLayout>
+
     <!--    applicant experience-->
     <LinearLayout
         android:layout_width="match_parent"
@@ -123,6 +163,25 @@
             android:text="License"/>
     </LinearLayout>
 
+    <!--    availability-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="#2196F3"
+            android:text="Availability: "/>
+        <TextView
+            android:id="@+id/availability"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="availability"/>
+    </LinearLayout>
 
 
 
