--- a/app/src/main/res/layout/job_adv_list_view.xml
+++ b/app/src/main/res/layout/job_adv_list_view.xml
@@ -33,12 +33,22 @@
                 android:text="5"/>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView
             android:id="@+id/companyNameID"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25dp"
+            android:layout_marginRight="50dp"
             android:text="Express"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17dp"
+            android:textColor="#05599C"
+            android:text="View more>>"/>
 
         <TextView
             android:id="@+id/getKeyStrID"
@@ -47,6 +57,7 @@
             android:textSize="25dp"
             android:visibility="gone"
             android:text="Express"/>
+        </LinearLayout>
 
     </LinearLayout>
 
