--- a/app/src/main/res/layout/activity_applicant_accept_reject.xml
+++ b/app/src/main/res/layout/activity_applicant_accept_reject.xml
@@ -171,8 +171,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp">
+        android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -186,6 +185,14 @@
             android:textStyle="bold"
             android:text="applicantAvailability"/>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/acceptRejectTVID"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="match_parent"
