--- a/app/src/main/res/layout/activity_applicant_accept_reject.xml
+++ b/app/src/main/res/layout/activity_applicant_accept_reject.xml
@@ -171,7 +171,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -183,7 +184,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="applicantAvailability"/>
+            android:text=""/>
     </LinearLayout>
 
     <TextView
